Cleaned up projects section

--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@
 	</section>
 	<!-- End Job 1 -->
 
-
-
-	<!-- Projects -->
+	<!-- Three - Projects -->
 	<section id="projects" class="wrapper">
 		<div class="inner">
 
@@ -156,7 +154,7 @@
 					<ul class="tight">
 						<li>Dockerized endpoint with management/guest separation and hardened defaults.</li>
 						<li>Zero-touch updates delivered via container images.</li>
-						<li>Authentication via <strong>Authentik</strong> (SSO) when paired with my Headscale control
+						<li>Authentication via <strong>Authentik</strong> when paired with my Headscale control
 							plane.</li>
 					</ul>
 					<p class="subtle"><em>Integrates with my self-hosted Headscale/OIDC control plane (see below).</em>
@@ -164,8 +162,10 @@
 					<p class="tech"><i class="fa fa-code"></i> Docker · Tailscale · Linux · Authentik</p>
 
 					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
-							Notes</a>
+						<a class="button small" href="https://github.com/kcskier" target="_blank" rel="noopener">
+							<i class="fa fa-github fa-lg" aria-hidden="true" style="margin-right:.35rem;"></i>
+							View on GitHub
+						</a>
 					</p>
 				</div>
 				<div class="col-4 col-12-small">
@@ -194,14 +194,14 @@
 						<li>Operational dashboards and logs for audits and onboarding.</li>
 					</ul>
 					<p class="subtle"><em>Provides authentication and coordination for the portable Black-Box VPN
-							devices.</em></p>
-					<p class="tech"><i class="fa fa-code"></i> Headscale · Tailscale · Authentik (OIDC) · Docker · Linux
+							devices.</em>
 					</p>
-					<!--
-    <p class="links">
-      <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra Notes</a>
-    </p>
-    -->
+					<p class="tech"><i class="fa fa-code"></i> Headscale · Tailscale · Authentik · Docker · Linux</p>
+
+					<p class="links">
+						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
+							Notes</a>
+					</p>
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
@@ -228,18 +228,21 @@
 						</li>
 						<li>App platform for Nextcloud, Plex, and Authentik via containers.</li>
 					</ul>
+					<p class="subtle"><em>Provides authentication and coordination for the portable Black-Box VPN
+							devices.</em>
+					</p>
 					<p class="tech"><i class="fa fa-code"></i> TrueNAS SCALE · ZFS · SMB/NFS · Docker · Linux ·
-						Nextcloud · Authentik</p>
-					<!--
-    <p class="links">
-      <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Configs</a>
-    </p>
-    -->
+						Nextcloud</p>
+
+					<p class="links">
+						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
+							Notes</a>
+					</p>
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
 						<img src="images/placeholder.png" srcset="images/placeholder.png 2x, images/placeholder.png 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="TrueNAS SCALE shares and apps">
+							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
 					</span>
 				</div>
 			</div>
@@ -262,16 +265,16 @@
 						<li>Home Assistant dashboards, scheduling, automations, and notifications.</li>
 					</ul>
 					<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Python · NOAA/NWS API</p>
-					<!--
-    <p class="links">
-      <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Repo/Notes</a>
-    </p>
-    -->
+
+					<p class="links">
+						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
+							Notes</a>
+					</p>
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
 						<img src="images/placeholder.png" srcset="images/placeholder.png 2x, images/placeholder.png 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="Custom sprinkler control with Home Assistant">
+							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
 					</span>
 				</div>
 			</div>
@@ -279,9 +282,9 @@
 				<hr class="project-sep">
 			</div>
 
-			<!-- Home Assistant Automation Suite -->
+			<!-- Home Assistant -->
 			<header>
-				<h4>Home Assistant Automation Suite</h4>
+				<h4>Home Assistant</h4>
 			</header>
 			<div class="row gtr-25">
 				<div class="col-8 col-12-small">
@@ -295,340 +298,20 @@
 							devices.</li>
 					</ul>
 					<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Zigbee · Z-Wave · MQTT</p>
-					<!--
-    <p class="links">
-      <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Configs</a>
-    </p>
-    -->
+
+					<p class="links">
+						<a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra
+							Notes</a>
+					</p>
 				</div>
 				<div class="col-4 col-12-small">
 					<span class="image fit" style="max-width:280px; margin-left:auto;">
-						<img src="placeholder-400x400-square.png"
-							srcset="placeholder-800x800-square.png 2x, placeholder-400x400-square.png 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="Home Assistant automations and dashboards">
-					</span>
-				</div>
-			</div>
-
-			<!-- Project: Black-Box -->
-			<div class="row gtr-25">
-				<!-- Left: all text (title, subtitle, bullets, tech, buttons) -->
-				<div class="col-7 col-12-small">
-					<header>
-						<h4>Raspberry Pi “Black-Box” VPN Endpoint</h4>
-						<p class="subtle">Portable VPN appliance running Tailscale with zero-touch updates and automated
-							subnet routing.</p>
-					</header>
-
-					<ul class="tight">
-						<li>Dockerized endpoint with management/guest separation and hardened defaults.</li>
-						<li>Zero-touch updates delivered via container images.</li>
-						<li>Authentication via <strong>Authentik</strong> (SSO) when paired with my Headscale control
-							plane.</li>
-					</ul>
-
-					<p class="subtle"><em>Integrates with my self-hosted Headscale/OIDC control plane (see below).</em>
-					</p>
-					<p class="tech"><i class="fa fa-code"></i> Docker · Tailscale · Linux · Authentik</p>
-
-
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-
-				</div>
-
-				<!-- Right: image (square, bigger column) -->
-				<div class="col-5 col-12-small">
-					<span class="image fit">
 						<img src="images/placeholder.png" srcset="images/placeholder.png 2x, images/placeholder.png 1x"
-							style="aspect-ratio:1/1" loading="lazy" alt="Black-Box VPN endpoint">
+							style="aspect-ratio:1/1" loading="lazy" alt="Headscale and Authentik OIDC control plane">
 					</span>
 				</div>
 			</div>
-
-			<div class="col-12">
-				<hr class="project-sep">
-			</div>
-			<!-- Project 2: Headscale + OIDC (image right) -->
-			<header>
-				<h4>Headscale + OIDC Infrastructure</h4>
-				<p class="subtle">Self-hosted control plane for Tailscale with SSO, role mapping, and multi-tenant
-					separation.</p>
-			</header>
-			<span class="image right">
-				<img src="placeholder-400x400-square.png"
-					srcset="placeholder-800x800-square.png 2x, placeholder-400x400-square.png 1x" width="400"
-					height="400" loading="lazy" alt="Headscale and Authentik OIDC control plane">
-			</span>
-			<div class="col-6 col-12-medium">
-				<ul class="tight">
-					<li>Headscale deployment for device coordination and policy control via ACLs.</li>
-					<li>OIDC via <strong>Authentik</strong> for SSO and role-based access.</li>
-					<li>Multi-tailnet separation (management &amp; guest) with ACL/tag isolation.</li>
-					<li>Operational dashboards and logs for audits and onboarding.</li>
-				</ul>
-				<p class="subtle"><em>Provides authentication and coordination for the portable Black-Box VPN
-						devices.</em></p>
-				<p class="tech"><i class="fa fa-code"></i> Headscale · Tailscale · Authentik (OIDC) · Docker · Linux</p>
-				<!--
-      <p class="links">
-        <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Infra Notes</a>
-      </p>
-      -->
-			</div>
-			<div style="clear: both;"></div>
-			<div class="col-12">
-				<hr class="project-sep">
-			</div>
-
-			<!-- Project 3: TrueNAS (image left) -->
-			<header>
-				<h4>TrueNAS SCALE Storage &amp; Services</h4>
-				<p class="subtle">ZFS-based storage platform hosting SMB/NFS shares and self-hosted apps.</p>
-			</header>
-			<span class="image left">
-				<img src="placeholder-400x400-square.png"
-					srcset="placeholder-800x800-square.png 2x, placeholder-400x400-square.png 1x" width="400"
-					height="400" loading="lazy" alt="TrueNAS SCALE shares and apps">
-			</span>
-			<div class="col-6 col-12-medium">
-				<ul class="tight">
-					<li>SMB/NFS shares for Windows &amp; Linux with dataset-level ACLs and snapshot-backed “Previous
-						Versions”.</li>
-					<li>ZFS datasets with scheduled snapshotting &amp; replication for backups and fast rollback.</li>
-					<li>App platform for Nextcloud, Plex, and Authentik via containers.</li>
-				</ul>
-				<p class="tech"><i class="fa fa-code"></i> TrueNAS SCALE · ZFS · SMB/NFS · Docker · Linux · Nextcloud ·
-					Authentik</p>
-				<!--
-      <p class="links">
-        <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Configs</a>
-      </p>
-      -->
-			</div>
-			<div style="clear: both;"></div>
-			<div class="col-12">
-				<hr class="project-sep">
-			</div>
-
-			<!-- Project 4: Sprinklers (image right) -->
-			<header>
-				<h4>Python-Based Sprinkler System</h4>
-				<p class="subtle">Weather-aware irrigation with zone control, Python scripting, and Home Assistant
-					integration.</p>
-			</header>
-			<span class="image right">
-				<img src="images/placeholder.png" srcset="images/placeholder.png 1x, images/placeholder.png 1x"
-					width="400" height="400" loading="lazy" alt="Custom sprinkler control with Home Assistant">
-			</span>
-			<div class="col-6 col-12-medium">
-				<ul class="tight">
-					<li>Custom control stations built on Shelly relays with manual override/service mode.</li>
-					<li>Python control script: NOAA/NWS weather checks, pressure sensing, and per-zone run times.</li>
-					<li>Home Assistant dashboards, scheduling, automations, and notifications.</li>
-				</ul>
-				<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Python · NOAA/NWS API</p>
-				<!--
-      <p class="links">
-        <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Repo/Notes</a>
-      </p>
-      -->
-			</div>
-			<div style="clear: both;"></div>
-			<div class="col-12">
-				<hr class="project-sep">
-			</div>
-
-			<!-- Project 5: Home Assistant (image left) -->
-			<header>
-				<h4>Home Assistant Automation Suite</h4>
-				<p class="subtle">Unified automations for presence, safety, and convenience—backed by a resilient HA
-					config.</p>
-			</header>
-			<span class="image left">
-				<img src="placeholder-400x400-square.png"
-					srcset="placeholder-800x800-square.png 2x, placeholder-400x400-square.png 1x" width="400"
-					height="400" loading="lazy" alt="Home Assistant automations and dashboards">
-			</span>
-			<div class="col-6 col-12-medium">
-				<ul class="tight">
-					<li>Integration with the sprinkler system, providing schedules, rain delays, and run history.</li>
-					<li>Multiple IoT networks: Zigbee, Z-Wave, and Wi-Fi under a single automation platform.</li>
-					<li>Presence detection, quiet hours, and automation of lighting, vacuums, and other smart devices.
-					</li>
-				</ul>
-				<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Zigbee · Z-Wave · MQTT</p>
-				<!--
-      <p class="links">
-        <a class="button small icon fa-github" href="https://github.com/kcskier" target="_blank">Configs</a>
-      </p>
-      -->
-			</div>
-			<div style="clear: both;"></div>
-
-		</div>
 	</section>
-
-
-	<!-- Projects -->
-	<section id="projects" class="wrapper">
-		<div class="inner">
-
-			<header class="major">
-				<h2>Projects</h2>
-			</header>
-
-			<!-- Project 1: Black-Box -->
-			<header>
-				<h4>Raspberry Pi “Black-Box” VPN Endpoint</h4>
-				<p class="subtle">Portable VPN appliance running Tailscale with zero-touch updates and automated subnet
-					routing.</p>
-			</header>
-			<div class="row gtr-50">
-				<!-- Image column (smaller: 3/9) -->
-				<div class="col-3 col-12-small">
-					<span class="image fit">
-						<img src="images/placeholder.png"
-							srcset="images/placeholder.png 3x, images/placeholder.png 2x, images/placeholder.png 1x"
-							width="256" height="256" alt="Black-Box VPN endpoint">
-					</span>
-				</div>
-				<div class="col-8 col-12-small">
-					<ul class="tight">
-						<li>Dockerized endpoint with management/guest separation and hardened defaults.</li>
-						<li>Zero-touch updates delivered via container images.</li>
-						<li>Authentication via <strong>Authentik</strong> (SSO) when paired with my Headscale control
-							plane.
-						</li>
-					</ul>
-					<p class="subtle"><em>Integrates with my self-hosted Headscale/OIDC control plane (see below).</em>
-					</p>
-					<p class="tech"><i class="fa fa-code"></i> Docker · Tailscale · Linux · Authentik</p>
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-				</div>
-
-				<div class="col-12">
-					<hr class="project-sep">
-				</div>
-
-				<!-- Project 2: Headscale + OIDC -->
-				<header>
-					<h4>Headscale + OIDC Infrastructure</h4>
-					<p class="subtle">Self-hosted control plane for Tailscale with SSO, role mapping, and multi-tenant
-						separation.</p>
-				</header>
-				<img src="profile.jpg" alt="Headscale and Authentik OIDC control plane" class="project-thumb">
-				<div class="col-6 col-12-medium">
-					<ul class="tight">
-						<li>Headscale deployment for device coordination and policy control via ACLs.</li>
-						<li>OIDC via <strong>Authentik</strong> for SSO and role-based access.</li>
-						<li>Multi-tailnet separation (management &amp; guest) with ACL/tag isolation.</li>
-						<li>Operational dashboards and logs for audits and onboarding.</li>
-					</ul>
-					<p class="subtle"><em>Provides authentication and coordination for the portable Black-Box VPN
-							devices.</em></p>
-					<p class="tech"><i class="fa fa-code"></i> Headscale · Tailscale · Authentik (OIDC) · Docker · Linux
-					</p>
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-				</div>
-
-				<div class="col-12">
-					<hr class="project-sep">
-				</div>
-
-				<!-- Project 3: TrueNAS -->
-				<header>
-					<h4>TrueNAS SCALE Storage &amp; Services</h4>
-					<p class="subtle">ZFS-based storage platform hosting SMB/NFS shares and self-hosted apps.</p>
-				</header>
-				<img src="pic06.jpg" alt="TrueNAS SCALE shares and apps" class="project-thumb">
-				<div class="col-6 col-12-medium">
-					<ul class="tight">
-						<li>SMB/NFS shares for Windows &amp; Linux with dataset-level ACLs and snapshot-backed “Previous
-							Versions”.</li>
-						<li>ZFS datasets with scheduled snapshotting &amp; replication for backups and fast rollback.
-						</li>
-						<li>App platform for Nextcloud, Plex, and Authentik via containers.</li>
-					</ul>
-					<p class="tech"><i class="fa fa-code"></i> TrueNAS SCALE · ZFS · SMB/NFS · Docker · Linux ·
-						Nextcloud ·
-						Authentik</p>
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-				</div>
-
-				<div class="col-12">
-					<hr class="project-sep">
-				</div>
-
-				<!-- Project 4: Sprinklers -->
-				<header>
-					<h4>Python-Based Sprinkler System</h4>
-					<p class="subtle">Weather-aware irrigation with zone control, Python scripting, and Home Assistant
-						integration.</p>
-				</header>
-				<img src="pic01.jpg" alt="Custom sprinkler control with Home Assistant" class="project-thumb">
-				<div class="col-6 col-12-medium">
-					<ul class="tight">
-						<li>Custom control stations built on Shelly relays with manual override/service mode.</li>
-						<li>Python control script: NOAA/NWS weather checks, pressure sensing, and per-zone run times.
-						</li>
-						<li>Home Assistant dashboards, scheduling, automations, and notifications.</li>
-					</ul>
-					<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Python · NOAA/NWS API</p>
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-				</div>
-
-				<div class="col-12">
-					<hr class="project-sep">
-				</div>
-
-				<!-- Project 5: Home Assistant -->
-				<header>
-					<h4>Home Assistant Automation Suite</h4>
-					<p class="subtle">Unified automations for presence, safety, and convenience—backed by a resilient HA
-						config.</p>
-				</header>
-				<img src="pic06.jpg" alt="Home Assistant automations and dashboards" class="project-thumb">
-				<div class="col-6 col-12-medium">
-					<ul class="tight">
-						<li>Integration with the sprinkler system, providing schedules, rain delays, and run history.
-						</li>
-						<li>Multiple IoT networks: Zigbee, Z-Wave, and Wi-Fi under a single automation platform.</li>
-						<li>Presence detection, quiet hours, and automation of lighting, vacuums, and other smart
-							devices.
-						</li>
-					</ul>
-					<p class="tech"><i class="fa fa-code"></i> Home Assistant · Shelly · Zigbee · Z-Wave · MQTT</p>
-					<p class="links">
-						<a class="button small icon fa-github" href="https://github.com/kcskier"
-							target="_blank">Repo/Notes</a>
-						<a class="button small icon fa-envelope" href="#contact">Ask for demo</a>
-					</p>
-				</div>
-
-			</div>
-	</section>
-
-
 
 	<!-- Four - Education, Certs, Skills -->
 	<section id="three" class="wrapper">
@@ -669,7 +352,7 @@
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
 								target="_blank">Administering Windows Server Hybrid Core Infrastructure
 								(AZ-800)</a></h4>
-						<p>Expected August 2025, Microsoft Corporation</p>
+						<p>Expected September 2025, Microsoft Corporation</p>
 					</li>
 					<li>
 						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification"
