--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 		<ul class="icons labeled">
 			<li><a href="mailto:kcskier12@gmail.com" class="icon label fa-envelope"><span
 						class="label">kcskier12@gmail.com</span></a></li>
-			<li><a href="https://joinhandshake.com" class="icon label fa-handshake"><span
-						class="label">crockerk@oregonstate.edu</span></a></li>
+			<li><a href="https://github.com/kcskier" class="icon brands fa-github"><span
+						class="label">@kcskier</span></a></li>
 			<li><a href="https://www.linkedin.com/in/kendell-crocker-b2144519b"
 					class="icon brands fa-linkedin-square"><span class="label">Kendell Crocker</span></a></li>
 		</ul>
 		<!--<ul class="icons labeled">
                     <li><a href="https://bitbucket.org/kcskier/profile/repositories" class="icon brands fa-bitbucket"><span class="label">Kendell Crocker</span></a></li>
                     <li><a href="https://github.com/kcskier" class="icon brands fa-github"><span class="label">@kcskier</span></a></li>
-                </ul>-->
+        </ul>-->
 	</section>
 
 	<!-- Two - Experience-->
@@ -176,6 +176,14 @@
 					</li>
 				</ul>
 			</header>
+			<header>
+				<ul>
+					<li>
+						<h4>Associate of Science - Computer Science</h4>
+						<p>Lane Community College, Eugene, Oregon - June 2019</p>
+					</li>
+				</ul>
+			</header>
 
 			<!-- Certifictaions -->
 			<header class="major">
@@ -189,17 +197,20 @@
 						<p>Expected 2025, Microsoft Corporation</p>
 					</li>-->
 					<li>
-						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/" target="_blank">Administering Windows Server Hybrid Core Infrastructure
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/"
+								target="_blank">Administering Windows Server Hybrid Core Infrastructure
 								(AZ-800)</a></h4>
 						<p>Expected August 2025, Microsoft Corporation</p>
 					</li>
 					<li>
-						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification" target="_blank">Microsoft Certified: Azure Fundamentals
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification"
+								target="_blank">Microsoft Certified: Azure Fundamentals
 								(AZ-900)</a></h4>
 						<p>May 2025, Microsoft Corporation</p>
 					</li>
 					<li>
-						<h4><a href="https://www.cisco.com/site/us/en/learn/training-certifications/certifications/enterprise/ccna/index.html" target="_blank">Cisco Certified Network Associate
+						<h4><a href="https://www.cisco.com/site/us/en/learn/training-certifications/certifications/enterprise/ccna/index.html"
+								target="_blank">Cisco Certified Network Associate
 								(CCNA)</a></h4>
 						<p>March 2025, Cisco Systems, Inc.</p>
 					</li>
@@ -214,7 +225,7 @@
 						<p>Audinate - May 2023</p>
 					</li>
 				</ul>
-				
+
 			</header>
 
 			<!-- Related Skills -->
