more work on overal design

--- a/index.html
+++ b/index.html
@@ -29,111 +29,17 @@
 		<div class="content">
 			<h1><a href="#">Kendell Crocker</a></h1>
 			<p>Systems & Networking | AD · Azure · Linux · Cloud</p>
+			<!-- Hero buttons: use "actions" to align like other sections -->
+			<ul class="actions">
+				<li><a href="#projects" class="button scrolly">Projects</a></li>
+				<li><a href="#experience" class="button scrolly">Experience</a></li>
+				<li><a href="#education" class="button scrolly">Education &amp; Certs</a></li>
+				<li><a href="#contact" class="button scrolly">Contact</a></li>
+			</ul>
 		</div>
 		<div><img src="images/profile.jpg" alt="" /></div>
 		</div>
 	</header>
-
-	<!-- One - Bio and contact -->
-	<section id="one" class="wrapper style2 special">
-		<header class="major">
-			<h2>Contact Information</h2>
-		</header>
-		<ul class="icons labeled">
-			<li><a href="mailto:kcskier12@gmail.com" class="icon label fa-envelope"><span
-						class="label">kcskier12@gmail.com</span></a></li>
-			<li><a href="https://github.com/kcskier" class="icon brands fa-github"><span
-						class="label">@kcskier</span></a></li>
-			<li><a href="https://www.linkedin.com/in/kendell-crocker-b2144519b"
-					class="icon brands fa-linkedin-square"><span class="label">Kendell Crocker</span></a></li>
-		</ul>
-		<!--<ul class="icons labeled">
-                    <li><a href="https://bitbucket.org/kcskier/profile/repositories" class="icon brands fa-bitbucket"><span class="label">Kendell Crocker</span></a></li>
-                    <li><a href="https://github.com/kcskier" class="icon brands fa-github"><span class="label">@kcskier</span></a></li>
-                </ul>-->
-	</section>
-
-	<!-- Two - Experience-->
-	<section id="two" class="wrapper">
-		<div class="inner">
-
-			<!--Work Experience-->
-			<header class="major">
-				<h2>Work Experience</h2>
-			</header>
-
-			<!-- Job 5 -->
-			<header>
-				<h4>Marathon Coach, Inc.</h4>
-				<p>Coach Network Designer, June 2023 - Current</p>
-			</header>
-			<div class="col-6 col-12-medium">
-				<ul>
-					<li>Design, maintain and oversee installation of coach networking systems</li>
-					<li>Provide technical support for production teams, multiple service centers, and customers. </li>
-					<li>Research and develop innovative networking solutions to enhance connectivity between<br>support
-						teams and customers on motor coaches.</li>
-				</ul>
-			</div>
-			<!-- End Job 5 -->
-
-			<!-- Job 4 -->
-			<header>
-				<h4>Life Bible Church</h4>
-				<p>Assistant IT Director, November 2020 - June 2023</p>
-			</header>
-			<div class="col-6 col-12-medium">
-				<ul>
-					<li>Design, install, and maintain campus wide computer networks</li>
-					<li>Provided technical on-call support to staff and volunteers</li>
-					<li>Designed, built and oversaw a live produciton environment including<br>audio mixing, video
-						production and live stream components.</li>
-				</ul>
-			</div>
-			<!-- End Job 4 -->
-
-			<!-- Job 3 -->
-			<header>
-				<h4>Continuant, Inc.</h4>
-				<p>Field Technician, July 2020 - August 2020</p>
-			</header>
-			<div class="col-6 col-12-medium">
-				<ul>
-					<li>Worked with remote support to provide solve equipment issues</li>
-					<li>Provided on-call support to clients</li>
-					<li>Maintained and inventoried communication systems for clients</li>
-				</ul>
-			</div>
-			<!-- End Job 3 -->
-
-			<!-- Job 2 -->
-			<header>
-				<h4>Jerry's Home Improvement Center</h4>
-				<p>Sales Associate, August 2015 - October 2020</p>
-			</header>
-			<div class="col-6 col-12-medium">
-				<ul>
-					<li>Provide world class service and advice to customers</li>
-					<li>Maintain computer systems and Point Of Sale software for store operations</li>
-					<li>Coordinate with co-workers for setup of sale and promotional events</li>
-				</ul>
-			</div>
-			<!-- End Job 2 -->
-
-			<!-- Job 1 -->
-			<header>
-				<h4>Springfield Faith Center</h4>
-				<p>Head of sound/technical dept, September 2016 - December 2019</p>
-			</header>
-			<div class="col-6 col-12-medium">
-				<ul>
-					<li>Training and supervision of sound team</li>
-					<li>Oversee regular weekend services and other performace events</li>
-					<li>Maintain and provide support for sound equipment</li>
-				</ul>
-			</div>
-	</section>
-	<!-- End Job 1 -->
 
 	<!-- Three - Projects -->
 	<section id="projects" class="wrapper">
@@ -313,8 +219,90 @@
 			</div>
 	</section>
 
+	<!-- Two - Experience-->
+	<section id="experience" class="wrapper">
+		<div class="inner">
+
+			<!--Work Experience-->
+			<header class="major">
+				<h2>Work Experience</h2>
+			</header>
+
+			<!-- Job 5 -->
+			<header>
+				<h4>Marathon Coach, Inc.</h4>
+				<p>Coach Network Designer, June 2023 - Current</p>
+			</header>
+			<div class="col-6 col-12-medium">
+				<ul>
+					<li>Design, maintain and oversee installation of coach networking systems</li>
+					<li>Provide technical support for production teams, multiple service centers, and customers. </li>
+					<li>Research and develop innovative networking solutions to enhance connectivity between<br>support
+						teams and customers on motor coaches.</li>
+				</ul>
+			</div>
+			<!-- End Job 5 -->
+
+			<!-- Job 4 -->
+			<header>
+				<h4>Life Bible Church</h4>
+				<p>Assistant IT Director, November 2020 - June 2023</p>
+			</header>
+			<div class="col-6 col-12-medium">
+				<ul>
+					<li>Design, install, and maintain campus wide computer networks</li>
+					<li>Provided technical on-call support to staff and volunteers</li>
+					<li>Designed, built and oversaw a live produciton environment including<br>audio mixing, video
+						production and live stream components.</li>
+				</ul>
+			</div>
+			<!-- End Job 4 -->
+
+			<!-- Job 3 -->
+			<header>
+				<h4>Continuant, Inc.</h4>
+				<p>Field Technician, July 2020 - August 2020</p>
+			</header>
+			<div class="col-6 col-12-medium">
+				<ul>
+					<li>Worked with remote support to provide solve equipment issues</li>
+					<li>Provided on-call support to clients</li>
+					<li>Maintained and inventoried communication systems for clients</li>
+				</ul>
+			</div>
+			<!-- End Job 3 -->
+
+			<!-- Job 2 -->
+			<header>
+				<h4>Jerry's Home Improvement Center</h4>
+				<p>Sales Associate, August 2015 - October 2020</p>
+			</header>
+			<div class="col-6 col-12-medium">
+				<ul>
+					<li>Provide world class service and advice to customers</li>
+					<li>Maintain computer systems and Point Of Sale software for store operations</li>
+					<li>Coordinate with co-workers for setup of sale and promotional events</li>
+				</ul>
+			</div>
+			<!-- End Job 2 -->
+
+			<!-- Job 1 -->
+			<header>
+				<h4>Springfield Faith Center</h4>
+				<p>Head of sound/technical dept, September 2016 - December 2019</p>
+			</header>
+			<div class="col-6 col-12-medium">
+				<ul>
+					<li>Training and supervision of sound team</li>
+					<li>Oversee regular weekend services and other performace events</li>
+					<li>Maintain and provide support for sound equipment</li>
+				</ul>
+			</div>
+	</section>
+	<!-- End Job 1 -->
+
 	<!-- Four - Education, Certs, Skills -->
-	<section id="three" class="wrapper">
+	<section id="education" class="wrapper">
 		<div class="inner">
 			<!-- Education -->
 			<header class="major">
@@ -401,7 +389,7 @@
 	</section>
 
 	<!-- Four - Hobbies-->
-	<section id="four" class="wrapper">
+	<section id="activities" class="wrapper">
 		<div class="inner alt">
 			<header class="major">
 				<h2>Interests and Activities</h2>
@@ -433,6 +421,38 @@
 				planning a weekend getaway, or simply enjoying the thrill of being outdoors together.
 			</p>
 		</div>
+	</section>
+
+	<!-- One - Bio and contact -->
+	<section id="contact" class="wrapper style2 special">
+		<header class="major">
+			<h2>Contact Information</h2>
+		</header>
+		<ul class="icons labeled">
+			<li><a href="mailto:kcskier12@gmail.com" class="icon label fa-envelope"><span
+						class="label">kcskier12@gmail.com</span></a></li>
+			<li><a href="https://github.com/kcskier" class="icon brands fa-github"><span
+						class="label">@kcskier</span></a></li>
+			<li><a href="https://www.linkedin.com/in/kendell-crocker-b2144519b"
+					class="icon brands fa-linkedin-square"><span class="label">Kendell Crocker</span></a></li>
+		</ul>
+		<ul class="icons labeled">
+			<li><a href="resume.pdf" class="icon label fa-file-pdf"><span class="label">Resume Download</span></a></li>
+
+		</ul>
+		<ul class="icons labeled" style="margin-top: 1rem;">
+			<li>
+				<a href="resume.pdf" class="icon label fa-file-pdf-o" target="_blank" rel="noopener"
+					download="Kendell_Crocker_Resume.pdf">
+					<span class="label">Resume Download</span>
+				</a>
+			</li>
+		</ul>
+
+		<!--<ul class="icons labeled">
+                    <li><a href="https://bitbucket.org/kcskier/profile/repositories" class="icon brands fa-bitbucket"><span class="label">Kendell Crocker</span></a></li>
+                    <li><a href="https://github.com/kcskier" class="icon brands fa-github"><span class="label">@kcskier</span></a></li>
+                </ul>-->
 	</section>
 
 	<!-- Six -->
@@ -781,21 +801,21 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt
 					felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit
 					adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque
-					praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus
-					vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer
-					ac pellentesque praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu
-					faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum
-					ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing
-					accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+					praesent. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer
+					ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis
+					in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu
+					faucibus. Integer ac pellentesque praesent.</p>
 			</section>
 
 		</div>
 	</section>
 	-->
-
-	<!-- Footer -->
-	<footer id="footer">
-		<p> Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+	<!-- Footer with Contact Me button -->
+	<footer style="text-align:center; padding:30px;">
+		<a href="#contact" class="button scrolly">Contact Me</a>
+		<p style="font-size: 0.8em; color: #999; margin-top: 10px;">
+			Credits: <a href="http://html5up.net" style="color: #bbb;">HTML5 UP</a>
+		</p>
 	</footer>
 
 	<!-- Scripts -->
